chore: Add Catan Cards Counter to projects section

--- a/index.html
+++ b/index.html
@@ -57,18 +57,36 @@
             <p>Hello! My name is Hanbin Chen, and I am a computer science student. I am passionate about technology and programming, always eager to learn new things and take on challenges.</p>
         </section>
         <section class="section" id="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Project 1: Awesome Project</h3>
-                <img src="project1.jpg" alt="Screenshot of Project 1">
-                <p>This project is about...</p>
-                <a href="https://www.youtube.com/watch?v=example">Watch Video</a>
+            <div style="display: flex; align-items: center; border: 1px solid #ddd; padding: 20px;">
+                <div style="flex: 1; padding-right: 20px;">
+                    <h2>VierGewiint</h2>
+                    <p>
+                        A board game always stimulates their creativity!
+Four Wins is a two-person strategy game. Try to defeat your opponent! Even you can challenge different AI programmes.
+Connect Four is a two-person strategy board game. A player drops a piece into a column and this piece occupies the lowest free space in the column. The winner is the player who first manages to line up four or more of his pieces horizontally, vertically, or diagonally, Even you can challenge different AI programs. 
+Rules and strategy
+A player drops a piece into a column and this piece occupies the lowest free space in the column. The winner is the player who first manages to line up four or more of his pieces horizontally, vertically or diagonally.
+                    </p>
+                </div>
+                <div style="flex: 1; text-align: center;">
+                    <img src="https://gitlab.com/hanbin.9797/viergewinnt/-/raw/main/pictures/playing.png?ref_type=heads" alt="Toolbox Image" style="max-width: 100%; height: auto; border-radius: 10px;">
+                </div>
             </div>
+            
+
             <div class="project">
                 <h3>Project 2: Another Cool Project</h3>
                 <img src="project2.jpg" alt="Screenshot of Project 2">
                 <p>This project is about...</p>
                 <a href="https://www.youtube.com/watch?v=example">Watch Video</a>
+            </div>
+
+            <!-- my tools -->
+            <div class="project">
+                <h3>Project 3: My Toolbox</h3>
+                <p>I just started to build some tools for myself. Check them out:</p>
+                <a href="/catan/catan.html">Catan Cards Counter</a>, 
+                <a href="/shengnanCalculator.html">Cashier's Counter</a>
             </div>
         </section>
         <section class="section" id="skills">
@@ -85,8 +103,5 @@
             <p>LinkedIn: <a href="https://www.linkedin.com/in/hanbinchen">linkedin.com/in/hanbinchen</a></p>
         </section>
     </div>
-    <footer>
-        <p>&copy; 2024 Hanbin Chen</p>
-    </footer>
 </body>
 </html>
